Fixing div height for Chrome, so it doesn't have scrollbars.

--- a/modules/ext.pageTriage.views.toolbar/ext.pageTriage.tags.css
+++ b/modules/ext.pageTriage.views.toolbar/ext.pageTriage.tags.css
@@ -37,7 +37,7 @@
 #mwe-pt-tags {
 	float: right;
 	width: 382px;
-	height: 265px;
+	height: 266px;
 	overflow: auto;
 	padding: 8px;
 	border-left: 1px solid #9F9F9F;
